--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,59 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#root div {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+  align-items: center;
+  margin: 30px;
+  /* border: 2px solid rebeccapurple; */
+}
+
+form h1 {
+  font-size: 30px;
+}
+
+label, input {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 10px;
+}
+
+.card-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid rebeccapurple;
+  width: 300px;
+  margin: 30px;
+  border-radius: 15px;
+  text-align: center;
+}
+
+.card-div img {
+  width: 150px;
+}
+
+form label:nth-last-child(2) {
+  /* border: 2px solid rebeccapurple; */
+  width: 200px;
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+form label:nth-last-child(2) > input {
+  width: 20px;
+  margin: 0;
+}
