--- a/src/index.css
+++ b/src/index.css
@@ -12,58 +12,56 @@ code {
     monospace;
 }
 
-#root div {
+#root > div:nth-of-type(1) {
   display: flex;
-  justify-content: space-evenly;
+  height: 100vh;
 }
 
 form {
+  border: 1px solid black;
   display: flex;
   flex-direction: column;
-  width: 20%;
+  background-color: rgb(91, 94, 166);
+  height: 100%;
+  width: 50%;
   align-items: center;
-  margin: 30px;
-  /* border: 2px solid rebeccapurple; */
+  justify-content: center;
 }
 
 form h1 {
-  font-size: 30px;
+  font-weight: 500;
 }
 
-label, input {
+form label {
+  font-weight: 500;
   display: flex;
+  justify-content: flex-start;
   flex-direction: column;
-  align-items: flex-start;
-  margin-top: 10px;
+  /* border: 2px solid black; */
+  width: 250px;
+  margin: 5px;
+}
+
+form label input, textarea {
+  border-radius: 8px;
+  border: 2px solid black;
+}
+
+.preview {
+  border: 1px solid black;
+  background-color: rebeccapurple;
+  height: 100%;
+  width: 50%;
+  display: flex;
 }
 
 .card-div {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  border: 2px solid rebeccapurple;
-  width: 300px;
-  margin: 30px;
-  border-radius: 15px;
-  text-align: center;
-}
-
-.card-div img {
-  width: 150px;
-}
-
-form label:nth-last-child(2) {
-  /* border: 2px solid rebeccapurple; */
-  width: 200px;
-  display: flex;
-  flex-direction: row;
-  justify-content: start;
-  align-items: center;
-  margin-bottom: 15px;
-}
-
-form label:nth-last-child(2) > input {
-  width: 20px;
-  margin: 0;
+  margin: auto;
+  border: 1px solid black;
+  width: 40%;
+  height: 70%;
+  background-color: green;
 }
