--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,6 @@ form label input, textarea {
 
 .preview {
   border: 1px solid black;
-  background-color: rebeccapurple;
   height: 100%;
   width: 50%;
   display: flex;
@@ -58,10 +57,85 @@ form label input, textarea {
 .card-div {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   margin: auto;
+  border: 2px solid black;
+  width: 300px;
+  height: 550px;
+  background-color: rgb(8, 65, 92);
+}
+
+.name-div {
+  background-color: rgb(56, 134, 151);
+  /* border: 1px solid black; */
+  width: 100%;
+  min-height: 60px;
+  max-height: max-content;
+  padding: 5px;
+  text-align: center;
+}
+
+.image-div {
   border: 1px solid black;
-  width: 40%;
-  height: 70%;
-  background-color: green;
+  width: 70%;
+  height: 45%;
+  margin: 0 auto;
+}
+
+.image-div img {
+  width: 100%;
+  height: 100%;
+}
+
+.description-div {
+  /* border: 1px solid black; */
+  width: 100%;
+  min-height: 50px;
+  text-align: center;
+  margin-top: 5px;
+  color: black;
+  font-weight: 500;
+}
+
+.attr-div {
+  /* border: 1px solid black; */
+  text-align: center;
+  color: black;
+  font-weight: 500;
+  background-color: rgb(56, 134, 151);
+  margin-top: 10px;
+
+}
+
+.rare-div {
+  /* border: 1px solid black; */
+  text-align: center;
+  margin-top: 5px;
+  color: black;
+  font-weight: 500;
+}
+
+.trunfo-div {
+  width: 50%;
+  margin: 0 auto;
+  color: yellow;
+  background-color: black; 
+  margin: auto;
+  text-align: center;
+} 
+
+#root > div:nth-of-type(2) {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.my-cards-div {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 15px;
+}
+
+.card-div button {
+  border: 1px solid black;
+  margin: 5px auto;
 }
