--- a/src/index.css
+++ b/src/index.css
@@ -21,11 +21,13 @@ form {
   border: 1px solid black;
   display: flex;
   flex-direction: column;
-  background-color: rgb(91, 94, 166);
+  background-color: rgb(56, 134, 151);
   height: 100%;
   width: 50%;
   align-items: center;
   justify-content: center;
+  color: black;
+  font-size: 1.2em;
 }
 
 form h1 {
@@ -37,13 +39,27 @@ form label {
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
-  /* border: 2px solid black; */
   width: 250px;
   margin: 5px;
 }
 
 form label input, textarea {
   border-radius: 8px;
+  border: 2px solid black;
+  resize: none;
+}
+
+form label:nth-last-child(2) {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+form input[type="checkbox"] {
+  margin-left: 15px;
+}
+
+.btn-primary {
   border: 2px solid black;
 }
 
@@ -52,6 +68,7 @@ form label input, textarea {
   height: 100%;
   width: 50%;
   display: flex;
+  justify-content: center;
 }
 
 .card-div {
@@ -62,11 +79,11 @@ form label input, textarea {
   width: 300px;
   height: 550px;
   background-color: rgb(8, 65, 92);
+  padding-bottom: 5px;
 }
 
 .name-div {
   background-color: rgb(56, 134, 151);
-  /* border: 1px solid black; */
   width: 100%;
   min-height: 60px;
   max-height: max-content;
@@ -87,9 +104,8 @@ form label input, textarea {
 }
 
 .description-div {
-  /* border: 1px solid black; */
   width: 100%;
-  min-height: 50px;
+  height: 90px;
   text-align: center;
   margin-top: 5px;
   color: black;
@@ -97,7 +113,6 @@ form label input, textarea {
 }
 
 .attr-div {
-  /* border: 1px solid black; */
   text-align: center;
   color: black;
   font-weight: 500;
@@ -107,7 +122,6 @@ form label input, textarea {
 }
 
 .rare-div {
-  /* border: 1px solid black; */
   text-align: center;
   margin-top: 5px;
   color: black;
@@ -117,10 +131,11 @@ form label input, textarea {
 .trunfo-div {
   width: 50%;
   margin: 0 auto;
-  color: yellow;
-  background-color: black; 
+  color: black;
+  background-color: yellow; 
   margin: auto;
   text-align: center;
+  font-weight: 600;
 } 
 
 #root > div:nth-of-type(2) {
@@ -133,9 +148,69 @@ form label input, textarea {
   display: flex;
   flex-wrap: wrap;
   margin: 15px;
+  justify-content: center;
 }
 
 .card-div button {
   border: 1px solid black;
   margin: 5px auto;
+}
+
+.card-container {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+}
+
+.card-container button {
+  margin-top: 10px;
+  width: 100%;
+}
+
+
+.card-container h2 {
+  text-align: center;
+}
+
+.filter-div {
+  margin-left: 5px;
+  display: flex;
+  align-items: center;
+  color: black;
+}
+
+.filter-div h2 {
+  margin-right: 15px;
+}
+
+.filter-div label {
+  margin: 8px;
+  font-size: 20px;
+}
+
+.filter-div label:nth-last-child(1) {
+  display: flex;
+  align-items: center;
+}
+
+.filter-div input, .filter-div select {
+  height: 30px;
+  margin-left: 5px;
+}
+
+input[type='checkbox'] {
+  width:18px;
+  height:50px;
+  border:2px solid black;
+}
+
+::-webkit-scrollbar-track {
+  background-color: white;
+}
+::-webkit-scrollbar {
+  width: 10px;
+  background: rgb(56, 134, 151);
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgb(56, 134, 151);
 }
